conv-api-deployment.yml
apiVersion: apps/v1
kind: Deployment
metadata:
  name: conv-api-deployment
spec:
  replicas: 1
  selector:
    matchLabels:
      component: backend
  template:
    metadata:
      labels:
        component: backend
    spec:
      containers:
      - name: conv-api-deployment
        image: antonlarichev/conv-api:1.0
        volumeMounts:
          - name: conv-images
            mountPath: "/opt/app/uploads"
        resources:
          limits:
            memory: "256Mi"
            cpu: "125m"
        ports:
        - containerPort: 3000
      volumes:
        - name: conv-images
          persistentVolumeClaim:
            claimName: conv-api-pvc
