conv-app-deployment.yml
apiVersion: apps/v1
kind: Deployment
metadata:
  name: conv-app
spec:
  replicas: 1
  selector:
    matchLabels:
      component: frontend
  template:
    metadata:
      labels:
        component: frontend
    spec:
      containers:
      - name: conv-app
        image: antonlarichev/conv-app:1.2
        resources:
          limits:
            memory: "512Mi"
            cpu: "250m"
        ports:
        - containerPort: 80
