conv-app-pod.yml
apiVersion: v1
kind: Pod
metadata:
  name: conv-app
  labels:
    component: frontend
spec:
  containers:
  - name: conv-app
    image: antonlarichev/conv-app:1.2
    resources:
      limits:
        memory: "512Mi"
        cpu: "250m"
    ports:
      - containerPort: 80
