conv-processor-deployment.yml
apiVersion: apps/v1
kind: Deployment
metadata:
  name: conv-processor-deployment
spec:
  replicas: 5
  selector:
    matchLabels:
      component: image_processor
  template:
    metadata:
      labels:
        component: image_processor
    spec:
      containers:
      - name: conv-processor-deployment
        image: antonlarichev/conv-service:1.0
        resources:
          limits:
            memory: "128Mi"
            cpu: "125m"
        ports:
        - containerPort: 3000
