conv-api-service.yml
apiVersion: v1
kind: Service
metadata:
  name: conv-api-clusterip
spec:
  type: ClusterIP
  selector:
    component: backend
  ports:
  - port: 3000
    targetPort: 3000
