conv-app-service copy.yml
apiVersion: v1
kind: Service
metadata:
  name: conv-app-clusterip
spec:
  type: ClusterIP
  selector:
    component: frontend
  ports:
  - port: 3000
    targetPort: 80
