conv-app-service.yml
apiVersion: v1
kind: Service
metadata:
  name: conv-app-nodeport
spec:
  type: NodePort
  selector:
    component: frontend
  ports:
  - nodePort: 30001
    port: 3000
    targetPort: 80
