conv-rabbitmq-service.yml
apiVersion: v1
kind: Service
metadata:
  name: conv-mq-clusterip
spec:
  type: ClusterIP
  selector:
    component: broker
  ports:
  - port: 5672
    targetPort: 5672
    protocol: TCP
